# jira

./: .env.example  .gitignore  ARCHITECTURE.md  COPILOT_EXTRACTION_GUIDE.md  Cargo.toml  Dockerfile  HOW_IT_WORKS.md  JIRA_CREATE_EXTRACTION.md  JIRA_ISSUE_UI.md  JIRA_USER_PICKER.md  Makefile  PROJECT_EXPLANATION.md  README.md  REMOVED_TOOLS.md  USAGE.md  agent.go  agent.py  chat_service.go  docker-compose.yml  github.go  go.mod  gui.py  jira.go  jira_client.py  main.go  model_catalog.go  requirements.txt  run.sh  tools.go  tools.py  tools_test.go  web.go  web_data.go  web_helpers.go  web_server.go  web_templates.go
.github/workflows/: test.yml
agentcore/: models.go  models_test.go  service.go  service_test.go
artifacts/: http-transcript.md  zap-messages.json
chat/: engine.go  engine_test.go  session.go
chathttp/: handlers.go  handlers_test.go
chatui/: component.go  component_test.go
cmd/jira-agent/: agent.go  github.go  jira.go  (+14 more)
githubpr/: picker.go  picker_test.go
jiracreate/: issue_types.go  issue_types_test.go  issues.go  issues_test.go
jiraissueui/: component.go  component_test.go
qiskit-zap-ibm-demo/: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_EXPLANATION.md  README.md  ZAP_IBM_RUNTIME_REPORT.md  docker-compose.yml  pyproject.toml  run.sh
qiskit-zap-ibm-demo/artifacts/: http-transcript.md  zap-messages.json
qiskit-zap-ibm-demo/src/qiskit_zap_ibm_demo/: __init__.py  circuit.py  client.py  qiskit_payload.py  zap.py
qiskit-zap-ibm-demo/tests/: test_circuit.py  test_payload.py  test_zap.py
src/: main.rs
tests/: test_redact.py
(+8 files in other folders)
